maud/tests/warnings/attribute-missing-value.rs
use maud::html;

fn main() {
    html! {
        a href=
    };
}
